--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -20,6 +20,10 @@ jobs:
       - name: Set up Android SDK
         uses: android-actions/setup-android@v3
 
+      - name: Create local.properties
+        run: |
+          echo "sdk.dir=$ANDROID_SDK_ROOT" > Android/local.properties
+
       - name: Grant execute permission
         run: chmod +x ./Android/gradlew
 
