--- a/Android/app/build.gradle
+++ b/Android/app/build.gradle
@@ -15,7 +15,7 @@ android {
     }
     compileSdkVersion 30
     defaultConfig {
-        applicationId "com.example.samplestickerapp"
+        applicationId "com.fa1ya2.whatsappstickers"
         minSdkVersion 15
         targetSdkVersion 30
         versionCode 1
